force-app/main/default/objects/Worker__c/Worker__c.object-meta.xml
<CustomObject>
    <label>Worker</label>
    <nameField>
        <displayFormat>Worker-{0}</displayFormat>
        <label>Worker Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Workers</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>