force-app/main/default/objects/Worker__c/fields/CanAssignWork__c.field-meta.xml
<CustomField>
    <fullName>CanAssignWork__c</fullName>
    <label>CanAssignWork</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>no</fullName>
            </value>
            <value>
                <fullName>yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>