force-app/main/default/objects/Worker__c/fields/email__c.field-meta.xml
<CustomField>
    <fullName>email__c</fullName>
    <description>Enter your worker email address</description>
    <label>email</label>
    <length>32</length>
    <required>true</required>
    <type>Text</type>
</CustomField>