force-app/main/default/objects/Worker__c/fields/twoweeksnotice__c.field-meta.xml
<CustomField>
    <fullName>twoweeksnotice__c</fullName>
    <label>twoweeksnotice</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>twoweeksnotice</valueSetName>
    </valueSet>
</CustomField>