force-app/main/default/objects/Worker__c/recordTypes/ManagerPower.recordType-meta.xml
<RecordType>
    <fullName>ManagerPower</fullName>
    <active>true</active>
    <label>ManagerPower</label>
</RecordType>