force-app/main/default/objects/Worker__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Lastname__c</columns>
    <columns>Firstname__c</columns>
    <columns>LAST_ACTIVITY</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>